# Kokoro-FastAPI

./: .codeql-config.yml  .dockerignore  .env.example  .gitignore  .replit  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.cpu  Dockerfile.railway  IMPLEMENTATION_SUMMARY.md  INTEGRATION_COMPLETE.md  MigrationWorkingNotes.md  README.md  SMART_FEATURES_SUMMARY.md  TESTING_CHECKLIST.md  ZIPVOICE_INTEGRATION.md  docker-bake.hcl  longshot.py  package-lock.json  package.json  playwright.config.mjs  pyproject-runpod.toml  pyproject.toml  pytest.ini  railway.json  replit.nix  requirements-test.txt  requirements.txt  rp_handler.py  run-tests.sh  setup_visual_studio_env.bat  start-cpu.cmd  start-cpu.ps1  start-gpu.cmd  start-gpu.ps1  start-gpu.sh  start-gpu_mac.sh  start-rocm1151.ps1  (+4 more)
.aider.tags.cache.v3/: cache.db
.claude/skills/api-contrib/: SKILL.md
.claude/skills/readme-benchmarks/: SKILL.md
.claude/skills/web-contrib/: SKILL.md
.github/workflows/: ci.yml  docker-build.yml  release-helm.yaml  release.yml  test_build.yml  test_client_image.yml
api/psr/: README.md  openai_load_test.py  start_locust.cmd
api/src/: main.py
api/src/core/: auth.py  config.py  model_config.py  openai_mappings.json  paths.py
api/src/inference/: base.py  instance_pool.py  kokoro_v1.py  model_manager.py  optimized_zipvoice.py  pytorch_cpu.py  pytorch_gpu.py  voice_manager.py  voice_prompt_manager.py  zipvoice.py
api/src/routers/: debug.py  development.py  openai_compatible.py  web_player.py  zipvoice.py  zipvoice_enhanced.py
api/src/services/: audio.py  auto_transcription.py  quality_detection.py  share_link.py  smart_tuning.py  streaming_audio_writer.py  tts_service.py
api/src/structures/: custom_responses.py  schemas.py
api/tests/: test_audio_normalizer.py  test_audio_service.py  test_debug_endpoints.py  test_kokoro_v1.py  test_model_unload.py  test_normalizer.py  test_normalizer_redos.py  test_openai_endpoints.py  test_paths.py  test_text_processor.py  test_tts_service.py  test_zipvoice_integration.py
api/tests/integration/: conftest.py  test_tts_roundtrip.py  test_voices_endpoint.py
charts/kokoro-fastapi/: Chart.yaml  values.yaml
docker/: README.md  build.sh  docker-compose.test.yml
docker/cpu/: Dockerfile  Dockerfile.optimized  docker-compose.yml
docker/gpu/: Dockerfile  Dockerfile.optimized  Dockerfile.runpod  docker-compose-runpod.yml  docker-compose.yml
docker/gpu-rocm/: Dockerfile  docker-compose.yml
docker/intel/: Dockerfile  README.md  docker-compose.yml  entrypoint.sh  install_ubuntu_gpu_drivers.sh
docker/rocm/: Dockerfile  docker-compose.yml  kdb_install.sh  pyproject.toml  warmup_miopen.py
docker/rocm1151/: Dockerfile  docker-compose.yml
docker/scripts/: download_model.py  download_model.sh  entrypoint-zipvoice.sh  entrypoint.sh  healthcheck.sh
docker/test-client/: Dockerfile  pyproject.toml  pytest.ini
docs/: requirements.in  requirements.txt
examples/: pyproject.toml  test_auth.py  zipvoice_example.py
examples/assorted_checks/: validate_wav.py
examples/assorted_checks/benchmarks/: benchmark_first_token_stream_unified.py  benchmark_model_unload.py  benchmark_tts_rtf.py
examples/assorted_checks/benchmarks/lib/: shared_plotting.py
examples/assorted_checks/benchmarks/output_data/: first_token_benchmark_stream.json  first_token_benchmark_stream_openai.json  gpu_benchmark_results_rtf.json  gpu_benchmark_stats_rtf.txt
examples/assorted_checks/test_transcription/: BASELINE.md  README.md  run_long_form.bat  test_long_form.py  test_transcription.py  test_transcription_multilingual.py
examples/assorted_checks/test_transcription/output/: report.json  report_cpu.json  report_gpu.json
examples/assorted_checks/test_transcription/output_long_form/: long_form_report.json  long_form_report_cpu.json  long_form_report_gpu.json
examples/assorted_checks/test_transcription/output_multilingual/: report.json  report_cpu.json  report_gpu.json
examples/assorted_checks/test_transcription/output_multilingual_cpu_default/: report.json
examples/assorted_checks/test_transcription/output_multilingual_cpu_noja/: report.json
examples/assorted_checks/test_voices/: test_all_voices.py
examples/kokoro-client-docker/: README.md  requirements.txt  save_to_file.py  stream_to_speaker.py
pine_env/: pyvenv.cfg
scripts/: update_version.py  validate_integration.py
tests/: performance_test.py
ui/lib/: api.py
web/: index.html
web/src/: App.js  config.js
web/src/components/: PlayerControls.js  (+1 more)
web/styles/: badges.css  base.css
(+13 files in other folders)
