[project]
name = "kokoro-fastapi-rocm"
version = "0.1.0"
description = "FastAPI TTS Service - ROCM Version"
readme = "../README.md"
requires-python = ">=3.10"
dependencies = [
    # Core ML/DL for rocm
    "pytorch-triton-rocm==3.1.0",
    "torch==2.5.1+rocm6.2",
    "transformers==4.47.1",
]

[tool.uv.workspace]
members = ["../shared"]

[tool.uv.sources]
torch = { index = "pytorch-rocm" }
pytorch-triton-rocm = { index = "pytorch-rocm" }

[[tool.uv.index]]
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/rocm6.2"
explicit = true
